more TrainerPokemon refactor, remove a now-redundant test case